# Pac-Man

./: .gitignore  CMakeLists.txt  README  class files  main.cpp
.github/workflows/: cmake-multi-platform.yml  cmake.yml
Logic_Library/include/core/: GameEvent.h
Logic_Library/include/entitities/: StaticEntity.h
Logic_Library/include/entitities/DynamicEntity/: Character.h  Pacman.h
Logic_Library/include/patterns/: Observer.h  subject.h
Logic_Library/include/scoring/: HighScoreManager.h  Score.h
Logic_Library/include/world/: Camera.h  collision.h
Logic_Library/src/core/: Random.cpp
Logic_Library/src/entitities/: Ghost.cpp
assets/highscores/: highscore.txt
assets/maps/: map.txt  map1.txt  map2.txt  map3.txt  map4.txt  map5.txt
logic/: CMakeLists.txt
logic/include/core/: Constants.h  Random.h  Stopwatch.h
logic/include/entities/: CoinModel.h  DoorModel.h  DynamicEntity.h  EntityModel.h  FruitModel.h  GhostModel.h  PacmanModel.h  StaticEntity.h  Subject.h  WallModel.h
logic/include/entities/DynamicEntity/: Pacman.h
logic/include/entities/StaticEntity_collectibles/: CoinModel.h  WallModel.h  wall.h
logic/include/entitities/: Entity.h
logic/include/patterns/: AbstractFactory.h  Observer.h  Subject.h
logic/include/scoring/: Score.h
logic/include/world/: MapModel.h  World.h
logic/src/core/: Random.cpp  Stopwatch.cpp
logic/src/entities/: CoinModel.cpp  DoorModel.cpp  EntityModel.cpp  FruitModel.cpp  GhostModel.cpp  PacmanModel.cpp  WallModel.cpp
logic/src/entitities/: Coin.cpp  Fruit.cpp  StaticEntity.cpp
logic/src/patterns/: Observer.cpp  StateManager.cpp  Subject.cpp
logic/src/scoring/: Score.cpp
logic/src/world/: MapModel.cpp  World.cpp
representation/: CMakeLists.txt
representation/include/: Camera.h  Game.h  StateManger.h  Window.h
representation/include/factory/: ConcreteFactory.h
representation/include/rendering/: Animation.h  Animations.h  SpriteManager.h  SpriteSheet.h
representation/include/states/: GameOverState.h  LevelState.h  MenuState.h  PausedState.h  State.h  VictoryState.h
representation/include/views/: CharacterView.h  CollectibleView.h  DoorView.h  EntityView.h  MapView.h  WallView.h
representation/include/views/CollectibleView/: CoinView.h  FruitView.h  coinView.h
representation/include/views/characterview/: GhostView.h  PacmanView.h
representation/src/: Camera.cpp  Game.cpp  StateManager.cpp  Window.cpp
representation/src/factory/: ConcreteFactory.cpp
representation/src/rendering/: SpriteManager.cpp  SpriteSheet.cpp
representation/src/states/: GameOverState.cpp  LevelState.cpp  MenuState.cpp  PausedState.cpp  State.cpp  VictoryState.cpp
representation/src/views/: DoorView.cpp  DynamicEntityView.cpp  MapView.cpp  StaticEntityView.cpp  WallView.cpp
representation/src/views/CollectibleView/: CoinView.cpp  FruitView.cpp
representation/src/views/characterview/: GhostView.cpp  PacManView.cpp  PacmanView.cpp
sprites/: map.txt
sprites/levels/: map.txt
workflow/: cmake.yml
